--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
-- import_tasks: container.yml
-- import_tasks: firewall.yml
-- import_tasks: nginx.yml
+- include_tasks: beacon_node.yml
+  vars:
+    public_tcp_port: '{{beacon_node_listening_port + loop_index}}'
+    public_udp_port: '{{beacon_node_listening_port + loop_index}}'
+    container_name: 'beacon-node-{{beacon_node_build_flavour}}-{{beacon_node_network_name}}-{{loop_index}}'
+    index: '{{loop_index}}'
+  loop: '{{range(0, beacon_node_total_nodes)|list}}'
+  loop_control:
+    index_var: loop_index
 
