--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
   vars:
     public_tcp_port: '{{beacon_node_listening_port + loop_index}}'
     public_udp_port: '{{beacon_node_listening_port + loop_index}}'
-    container_name: 'beacon-node-{{beacon_node_build_flavour}}-{{beacon_node_network_name}}-{{loop_index}}'
+    container_name: 'beacon-node-{{beacon_node_build_flavour}}-{{beacon_node_network}}-{{loop_index}}'
     index: '{{loop_index}}'
   loop: '{{range(0, beacon_node_total_nodes)|list}}'
   loop_control:
