add dependency on infra-role-consul-service
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,4 +9,7 @@ galaxy_info:
   - name: Ubuntu
     versions:
     - xenial
-dependencies: []
+  dependencies:
+    - name: consul-service
+      src: git+git@github.com:status-im/infra-role-consul-service.git
+      scm: git
