--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,7 @@ beacon_node_verbose: false
 beacon_node_build_flavour: 'rlpx'
 beacon_node_network: 'testnet0'
 beacon_node_total_nodes: 1
+beacon_node_log_level: INFO
 
 # Image source: https://github.com/status-im/nimbus/tree/master/docker/beacon_node
 beacon_node_cont_tag: '{{ beacon_node_network }}-{{ beacon_node_build_flavour }}'
