--- a/tasks/beacon_node.yml
+++ b/tasks/beacon_node.yml
@@ -23,7 +23,7 @@
       - '{{ public_udp_port }}:{{ beacon_node_discovery_port }}/udp'
     command: |
       {% if beacon_node_verbose %}
-      --logLevel=DEBUG
+      --logLevel={{ beacon_node_log_level }}
       {% endif %}
       --network={{ beacon_node_network }}
       --tcpPort={{ beacon_node_listening_port }}
