--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,17 +1,22 @@
 ---
 beacon_node_build_flavour: 'rlpx'
 beacon_node_network: 'testnet0'
-beacon_node_total_nodes: 1
-beacon_node_running_nodes: 1
 beacon_node_log_level: INFO
 
 # Image source: https://github.com/status-im/nimbus/tree/master/docker/beacon_node
 beacon_node_cont_tag: '{{ beacon_node_network }}-{{ beacon_node_build_flavour }}'
 beacon_node_cont_image: 'statusteam/nimbus_beacon_node:{{ beacon_node_cont_tag }}'
+beacon_node_cont_name: 'beacon-node-{{ beacon_node_build_flavour }}-{{ beacon_node_network}}'
 
 beacon_node_discovery_port: 9000
 beacon_node_listening_port: 9000
+beacon_node_public_tcp_port: 9000
+beacon_node_public_udp_port: 9000
+beacon_node_public_address: '{{ ansible_hostname }}'
+
+beacon_node_cont_vol: '/docker/{{ beacon_node_cont_name }}'
 
 # general container management
 cont_recreate: false
 cont_restart: false
+cont_state: 'started'
