--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,4 @@
 ---
-- include_tasks: beacon_node.yml
-  vars:
-    public_tcp_port: '{{ beacon_node_listening_port + loop_index }}'
-    public_udp_port: '{{ beacon_node_discovery_port + loop_index }}'
-    container_name: 'beacon-node-{{ beacon_node_build_flavour }}-{{ beacon_node_network}}-{{loop_index }}'
-    index: '{{ loop_index }}'
-    is_running: '{{ loop_index < beacon_node_running_nodes }}'
-  loop: '{{ range(0, beacon_node_total_nodes) | list }}'
-  loop_control:
-    index_var: loop_index
+- import_tasks: container.yml
+- import_tasks: firewall.yml
+- import_tasks: consul.yml
