drop image flavour(protocol) from docker tag name
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,12 +1,11 @@
 ---
-beacon_node_build_flavour: 'rlpx'
 beacon_node_network: 'testnet0'
 beacon_node_log_level: INFO
 
 # Image source: https://github.com/status-im/nimbus/tree/master/docker/beacon_node
-beacon_node_cont_tag: '{{ beacon_node_network }}-{{ beacon_node_build_flavour }}'
+beacon_node_cont_tag: '{{ beacon_node_network }}'
 beacon_node_cont_image: 'statusteam/nimbus_beacon_node:{{ beacon_node_cont_tag }}'
-beacon_node_cont_name: 'beacon-node-{{ beacon_node_build_flavour }}-{{ beacon_node_network}}'
+beacon_node_cont_name: 'beacon-node-{{ beacon_node_network}}'
 
 beacon_node_discovery_port: 9000
 beacon_node_listening_port: 9000
