update to use new posix compliant flags
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -15,6 +15,10 @@ beacon_node_public_address: '{{ ansible_hostname }}'
 
 beacon_node_cont_vol: '/docker/{{ beacon_node_cont_name }}'
 
+# metrics
+beacon_node_metrics_enabled: true
+beacon_node_metrics_port: 9200
+
 # general container management
 cont_recreate: false
 cont_restart: false
