--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -19,12 +19,18 @@
     labels:
       com.centurylinklabs.watchtower.enable: 'true'
     ports:
-      - '{{ beacon_node_public_tcp_port }}:{{ beacon_node_listening_port }}'
+      - '{{ beacon_node_metrics_port }}:{{ beacon_node_metrics_port }}/tcp'
+      - '{{ beacon_node_public_tcp_port }}:{{ beacon_node_listening_port }}/tcp'
       - '{{ beacon_node_public_udp_port }}:{{ beacon_node_discovery_port }}/udp'
     command: |
-      --logLevel={{ beacon_node_log_level }}
-      --network={{ beacon_node_network }}
-      --tcpPort={{ beacon_node_listening_port }}
-      --udpPort={{ beacon_node_discovery_port }}
+      --eth1-network
+      --log-level={{ beacon_node_log_level }}
+      --tcp-port={{ beacon_node_listening_port }}
+      --udp-port={{ beacon_node_discovery_port }}
+      {% if beacon_node_metrics_enabled %}
+      --metrics-server
+      --metrics-server-address=0.0.0.0
+      --metrics-server-port={{ beacon_node_metrics_port }}
+      {% endif %}
     volumes:
       - '{{ beacon_node_cont_vol }}/data:/root/.cache/nimbus'
