--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -28,7 +28,7 @@
       --tcp-port={{ beacon_node_listening_port }}
       --udp-port={{ beacon_node_discovery_port }}
       {% if beacon_node_metrics_enabled %}
-      --metrics-server
+      --metrics-server=on
       --metrics-server-address=0.0.0.0
       --metrics-server-port={{ beacon_node_metrics_port }}
       {% endif %}
