add container name as metadata to metrics service
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -19,6 +19,8 @@
         port: '{{ beacon_node_metrics_port }}'
         address: '{{ ansible_local.tinc.vpn_ip }}'
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus', 'metrics']
+        meta:
+          container: '{{ beacon_node_cont_name }}'
         checks:
           - id: beacon-node-metrics
             type: http
