--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -23,6 +23,7 @@
       - '{{ beacon_node_listening_port }}:{{ beacon_node_listening_port }}/tcp'
       - '{{ beacon_node_discovery_port }}:{{ beacon_node_discovery_port }}/udp'
     command: |
+      --nat=extip:{{ beacon_node_public_address }}
       --log-level={{ beacon_node_log_level }}
       --tcp-port={{ beacon_node_listening_port }}
       --udp-port={{ beacon_node_discovery_port }}
