--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -9,10 +9,10 @@
         port: '{{ beacon_node_listening_port }}'
         address: '{{ beacon_node_public_address }}'
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus']
-        checks:
-          - id: beacon-node-health
-            type: tcp
-            tcp: 'localhost:{{ beacon_node_listening_port }}'
+        #checks:
+        #  - id: beacon-node-health
+        #    type: tcp
+        #    tcp: 'localhost:{{ beacon_node_listening_port }}'
 
       - id: '{{ beacon_node_cont_name }}-metrics'
         name: 'beacon-node-metrics'
@@ -21,7 +21,7 @@
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus', 'metrics']
         meta:
           container: '{{ beacon_node_cont_name }}'
-        checks:
-          - id: beacon-node-metrics
-            type: http
-            http: 'http://localhost:{{ beacon_node_metrics_port }}/metrics'
+        #checks:
+        #  - id: beacon-node-metrics
+        #    type: http
+        #    http: 'http://localhost:{{ beacon_node_metrics_port }}/metrics'
