--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -6,31 +6,43 @@
     owner: dockremap
     group: docker
 
+- name: 'Create container config: {{ beacon_node_cont_name }}'
+  set_fact:
+    beacon_node_compose:
+      version: '3.7'
+      services:
+        beacon_node:
+          container_name: '{{ beacon_node_cont_name }}'
+          image: '{{ beacon_node_cont_image }}'
+          restart: 'always'
+          ports:
+            - '{{ beacon_node_metrics_port }}:{{ beacon_node_metrics_port }}/tcp'
+            - '{{ beacon_node_listening_port }}:{{ beacon_node_listening_port }}/tcp'
+            - '{{ beacon_node_discovery_port }}:{{ beacon_node_discovery_port }}/udp'
+          command:
+            - '--nat=extip:{{ beacon_node_public_address }}'
+            - '--log-level={{ beacon_node_log_level }}'
+            - '--tcp-port={{ beacon_node_listening_port }}'
+            - '--udp-port={{ beacon_node_discovery_port }}'
+            - '--metrics-server=on'
+            - '--metrics-server-address=0.0.0.0'
+            - '--metrics-server-port={{ beacon_node_metrics_port }}'
+          volumes:
+            - '{{ beacon_node_cont_vol }}/data:/root/.cache/nimbus'
+
+- name: 'Create compose file: {{ beacon_node_cont_name }}'
+  copy:
+    dest: '{{ beacon_node_cont_vol }}/docker-compose.yml'
+    content: '{{ beacon_node_compose | to_nice_yaml }}'
+    owner: dockremap
+    group: docker
+    mode: 0644
+
 - name: 'Create container: {{ beacon_node_cont_name }}'
-  docker_container:
-    name: '{{ beacon_node_cont_name }}'
-    image: '{{ beacon_node_cont_image }}'
-    pull: true
-    restart_policy: always
+  docker_compose:
+    project_src: '{{ beacon_node_cont_vol }}'
     state: '{{ cont_state }}'
     recreate: '{{ cont_recreate }}'
-    restart: '{{ cont_restart }}'
-    # enable image updates via watchtower
-    labels:
-      com.centurylinklabs.watchtower.enable: 'true'
-    ports:
-      - '{{ beacon_node_metrics_port }}:{{ beacon_node_metrics_port }}/tcp'
-      - '{{ beacon_node_listening_port }}:{{ beacon_node_listening_port }}/tcp'
-      - '{{ beacon_node_discovery_port }}:{{ beacon_node_discovery_port }}/udp'
-    command: |
-      --nat=extip:{{ beacon_node_public_address }}
-      --log-level={{ beacon_node_log_level }}
-      --tcp-port={{ beacon_node_listening_port }}
-      --udp-port={{ beacon_node_discovery_port }}
-      {% if beacon_node_metrics_enabled %}
-      --metrics-server=on
-      --metrics-server-address=0.0.0.0
-      --metrics-server-port={{ beacon_node_metrics_port }}
-      {% endif %}
-    volumes:
-      - '{{ beacon_node_cont_vol }}/data:/root/.cache/nimbus'
+    restarted: '{{ cont_restart }}'
+    pull: true
+    build: no
