--- a/tasks/consul.yml
+++ b/tasks/consul.yml
@@ -10,8 +10,8 @@
         address: '{{ beacon_node_public_address }}'
         tags: ['{{ env }}.{{ stage }}', 'beacon', 'nimbus']
         #checks:
-        #  - id: beacon-node-health
-        #    type: tcp
+        #  - name: 'beacon-node-health'
+        #    type: 'tcp'
         #    tcp: 'localhost:{{ beacon_node_listening_port }}'
 
       - id: '{{ beacon_node_cont_name }}-metrics'
@@ -22,6 +22,6 @@
         meta:
           container: '{{ beacon_node_cont_name }}'
         #checks:
-        #  - id: beacon-node-metrics
-        #    type: http
+        #  - name: 'beacon-node-metrics-health'
+        #    type: 'http'
         #    http: 'http://localhost:{{ beacon_node_metrics_port }}/metrics'
