--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -24,9 +24,12 @@
             - '--log-level={{ beacon_node_log_level }}'
             - '--tcp-port={{ beacon_node_listening_port }}'
             - '--udp-port={{ beacon_node_discovery_port }}'
-            - '--metrics-server=on'
-            - '--metrics-server-address=0.0.0.0'
-            - '--metrics-server-port={{ beacon_node_metrics_port }}'
+            - '--rpc'
+            - '--rpc-address=0.0.0.0'
+            - '--rpc-port={{ beacon_node_rpc_port }}'
+            - '--metrics'
+            - '--metrics-address=0.0.0.0'
+            - '--metrics-port={{ beacon_node_metrics_port }}'
           volumes:
             - '{{ beacon_node_cont_vol }}/data:/root/.cache/nimbus'
 
