set memory and cpu limits on the container
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,6 +19,12 @@ beacon_node_metrics_port: 9200
 # rpc / administrative
 beacon_node_rpc_port: 9900
 
+# resource limits, mem in MB
+beacon_node_cpu_limit: 0.60
+beacon_node_mem_limit: '{{ (ansible_memtotal_mb * 0.6) | int }}'
+beacon_node_cpu_reserve: 0.20
+beacon_node_mem_reserve: '{{ (ansible_memtotal_mb * 0.2) | int }}'
+
 # general container management
 compose_state: 'present'
 compose_recreate: 'smart'
