use docker-compose command to use --compatibility
This is required due to following warning:

WARNING: Some services (beacon_node) use the 'deploy' key, which will be ignored.
         Compose does not support 'deploy' configuration - use `docker stack deploy` to deploy to a swarm.

Without it the cpu/mem limits are not applied.

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -32,6 +32,6 @@ beacon_node_restart_delay_sec: 10
 beacon_node_restart_window_sec: 120
 
 # general container management
-compose_state: 'present'
-compose_recreate: 'smart'
-compose_restart: 'always'
+compose_recreate: false
+compose_restart: false
+compose_destroy: false
