--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - import_tasks: install.yml
+- import_tasks: compose.yml
 - import_tasks: container.yml
 - import_tasks: firewall.yml
 - import_tasks: consul.yml
