--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -34,6 +34,10 @@
             - '{{ beacon_node_listening_port }}:{{ beacon_node_listening_port }}/tcp'
             - '{{ beacon_node_discovery_port }}:{{ beacon_node_discovery_port }}/udp'
           command:
+            {% if beacon_node_network == "testnet2" %}
+            - '--run'
+            - '--'
+            {% endif %}
             - '--nat=extip:{{ beacon_node_public_address }}'
             - '--log-level={{ beacon_node_log_level }}'
             - '--tcp-port={{ beacon_node_listening_port }}'
