--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -33,7 +33,7 @@
             - '{{ beacon_node_metrics_port }}:{{ beacon_node_metrics_port }}/tcp'
             - '{{ beacon_node_listening_port }}:{{ beacon_node_listening_port }}/tcp'
             - '{{ beacon_node_discovery_port }}:{{ beacon_node_discovery_port }}/udp'
-          command:
+          command: |
             {% if beacon_node_network == "testnet2" %}
             - '--run'
             - '--'
