--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -31,20 +31,20 @@
             - '{{ beacon_node_metrics_port }}:{{ beacon_node_metrics_port }}/tcp'
             - '{{ beacon_node_listening_port }}:{{ beacon_node_listening_port }}/tcp'
             - '{{ beacon_node_discovery_port }}:{{ beacon_node_discovery_port }}/udp'
-          command: |
+          command: >-
             {% if beacon_node_network == "testnet2" %}
-            --run \
-            -- \
+            --run
+            --
             {% endif %}
-            --nat=extip:{{ beacon_node_public_address }} \
-            --log-level={{ beacon_node_log_level }} \
-            --tcp-port={{ beacon_node_listening_port }} \
-            --udp-port={{ beacon_node_discovery_port }} \
-            --rpc \
-            --rpc-address=0.0.0.0 \
-            --rpc-port={{ beacon_node_rpc_port }} \
-            --metrics \
-            --metrics-address=0.0.0.0 \
+            --nat=extip:{{ beacon_node_public_address }}
+            --log-level={{ beacon_node_log_level }}
+            --tcp-port={{ beacon_node_listening_port }}
+            --udp-port={{ beacon_node_discovery_port }}
+            --rpc
+            --rpc-address=0.0.0.0
+            --rpc-port={{ beacon_node_rpc_port }}
+            --metrics
+            --metrics-address=0.0.0.0
             --metrics-port={{ beacon_node_metrics_port }}
           volumes:
             - '{{ beacon_node_cont_vol }}/data:/root/.cache/nimbus'
