put container restarts under the "cont_restart" flag
Had to gave up on `docker-compose up --no-start` because it still
stopped the running container image before pulling and creating a new
one.

Further more, we can now handle containers being restarted automatically
on our Altona servers.

--- a/tasks/container.yml
+++ b/tasks/container.yml
@@ -9,17 +9,18 @@
 
 # --compatibility flag required for mem/cpu limits
 - name: 'Create container: {{ beacon_node_cont_name }}'
-  command: |
-    docker-compose \
-      --compatibility \
-      up \
-      --quiet-pull \
-      --no-build \
+  command: >-
+    docker-compose
+      --compatibility
+      up
+      --quiet-pull
+      --no-build
       {% if compose_recreate %}
-      --force-recreate \
+      --force-recreate
       {% endif %}
-      --no-color \
-      --no-start
+      --no-color
+      -d
   args:
     chdir: '{{ beacon_node_cont_vol }}'
+  when: cont_restart
 
