--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -29,7 +29,8 @@
             - '{{ beacon_node_listening_port }}:{{ beacon_node_listening_port }}/tcp'
             - '{{ beacon_node_discovery_port }}:{{ beacon_node_discovery_port }}/udp'
           command: >-
-            {% if beacon_node_network == "testnet2" %}
+            {% if beacon_node_network in ["testnet2", "testnet3"] %}
+            --network {{ beacon_node_shared_testnet }}
             --run
             --
             {% endif %}
