specify mode for data folder as 0750
Fixes errors about too broad folder permissions:
{
  "lvl": "FAT",
  "ts": "2020-10-15 09:00:33.189+00:00",
  "msg": "Data folder has insecure permissions",
  "tid": 1,
  "file": "keystore_management.nim:59",
  "data_dir": "build/data/shared_medalla_0",
  "insecure_permissions": "{OtherRead, OtherExec}",
  "current_permissions": "0755 (rwxr-xr-x)",
  "required_permissions": "0750 (rwxr-x---)"
}

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -5,6 +5,7 @@
     state: directory
     owner: dockremap
     group: docker
+    mode: 0750
 
 - name: 'Create container config: {{ beacon_node_cont_name }}'
   set_fact:
