--- a/tasks/cron.yml
+++ b/tasks/cron.yml
@@ -5,7 +5,7 @@
   cron:
     name: "shared testnet restart"
     minute: "0"
-    hour: "*/12"
+    hour: "12"
     job: "PATH='/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/snap/bin'; cd {{ beacon_node_cont_vol }}; docker rm {{ beacon_node_cont_name }}-build-run; docker-compose --compatibility run --rm --name {{ beacon_node_cont_name }}-build-run beacon_node --build; docker-compose restart -t 60"
   when: beacon_node_shared_testnet_cron
 
