--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,9 +2,10 @@
 beacon_node_network: 'testnet0'
 beacon_node_log_level: INFO
 
-# Image source: https://github.com/status-im/nimbus/tree/master/docker/beacon_node
-beacon_node_cont_tag: '{{ beacon_node_network }}'
-beacon_node_cont_image: 'statusteam/nimbus_beacon_node:{{ beacon_node_cont_tag }}'
+beacon_node_repo_url: 'https://github.com/status-im/nimbus-eth2'
+beacon_node_repo_branch: 'devel'
+
+beacon_node_cont_image: 'statusteam/nimbus_beacon_node:{{ beacon_node_repo_branch }}'
 beacon_node_cont_name: 'beacon-node-{{ beacon_node_network}}'
 beacon_node_cont_vol: '/docker/{{ beacon_node_cont_name }}'
 
@@ -23,12 +24,16 @@ beacon_node_rpc_port: 9900
 beacon_node_mem_limit: '{{ (ansible_memtotal_mb * 0.5) | int }}'
 beacon_node_mem_reserve: '{{ (ansible_memtotal_mb * 0.4) | int }}'
 
+# Goerli RPC
+beacon_node_web3_url: 'wss://goerli.infura.io/ws/v3/6224f3c792cc443fafb64e70a98f871e'
+
 # general container management
 compose_recreate: false
 
 # shared testnet cron job
-beacon_node_shared_testnet_cron: false
+beacon_node_timer_rebuild: false
+beacon_node_timer_timeout: 3000
+beacon_node_timer_frequency: 'daily'
 
 # shared testnet name
 beacon_node_shared_testnet: 'medalla'
-
