--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -9,7 +9,7 @@
 
 - name: Verify network name
   assert:
-    that: '{{ beacon_node_network in ["testnet2", "testnet3"] }}'
+    that: '{{ beacon_node_network in ["medalla", "toledo"] }}'
 
 - name: 'Create container config: {{ beacon_node_cont_name }}'
   set_fact:
@@ -31,8 +31,8 @@
             - '{{ beacon_node_listening_port }}:{{ beacon_node_listening_port }}/tcp'
             - '{{ beacon_node_discovery_port }}:{{ beacon_node_discovery_port }}/udp'
           command: >-
-            --network={{ beacon_node_shared_testnet }}
-            --data-dir='/data/shared_{{ beacon_node_shared_testnet }}_0'
+            --network={{ beacon_node_network }}
+            --data-dir='/data/shared_{{ beacon_node_network }}_0'
             --web3-url={{ beacon_node_web3_url }}
             --nat=extip:{{ beacon_node_public_address }}
             --log-level={{ beacon_node_log_level }}
