--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -30,6 +30,7 @@
             - '{{ beacon_node_metrics_port }}:{{ beacon_node_metrics_port }}/tcp'
             - '{{ beacon_node_listening_port }}:{{ beacon_node_listening_port }}/tcp'
             - '{{ beacon_node_discovery_port }}:{{ beacon_node_discovery_port }}/udp'
+          entrypoint: '{{ beacon_node_cont_entrypoint }}'
           command: >-
             --network={{ beacon_node_network }}
             --data-dir='/data/{{ beacon_node_data_folder }}'
