--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -9,7 +9,7 @@
 
 - name: Verify network name
   assert:
-    that: '{{ beacon_node_network in ["medalla", "toledo"] }}'
+    that: '{{ beacon_node_network in ["medalla", "toledo", "pyrmont"] }}'
 
 - name: 'Create container config: {{ beacon_node_cont_name }}'
   set_fact:
@@ -34,7 +34,7 @@
           command: >-
             --network={{ beacon_node_network }}
             --data-dir='/data/{{ beacon_node_data_folder }}'
-            --web3-url={{ beacon_node_web3_url }}
+            --web3-url={{ beacon_node_web3_url | mandatory }}
             --nat=extip:{{ beacon_node_public_address }}
             --log-level={{ beacon_node_log_level }}
             --tcp-port={{ beacon_node_listening_port }}
