--- a/tasks/compose.yml
+++ b/tasks/compose.yml
@@ -24,7 +24,7 @@
           mem_reservation: '{{ beacon_node_mem_reserve }}M'
           # enable automatic container updates
           labels:
-            com.centurylinklabs.watchtower.enable: 'true'
+            com.centurylinklabs.watchtower.enable: '{{ beacon_node_cont_update_enabled|string }}'
           ports:
             - '127.0.0.1:{{ beacon_node_rpc_port }}:{{ beacon_node_rpc_port }}/tcp'
             - '{{ beacon_node_metrics_port }}:{{ beacon_node_metrics_port }}/tcp'
