--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,6 +11,9 @@ beacon_node_cont_vol: '/docker/{{ beacon_node_cont_name }}'
 beacon_node_cont_entrypoint: '/usr/local/bin/nimbus_beacon_node'
 beacon_node_cont_update_enabled: true
 
+# Subfolders for separate read-only mounting
+beacon_node_secrets_path: '{{ beacon_node_cont_vol }}/data/{{ beacon_node_data_folder }}/secrets'
+
 # connectivity settings
 beacon_node_discovery_port: 9000
 beacon_node_listening_port: 9000
